# OrbbecSDK-Android-Wrapper

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/libs/: libyuv-debug.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  orbbecsdkexamples.cpp
app/src/main/res/drawable/: gray_border.xml  spinner_dropdown_color.xml  spinner_dropdown_text_color.xml
app/src/main/res/layout/: activity_advanced_hdr.xml  activity_advanced_hw_d2c_align.xml  activity_advanced_multi_devices.xml  activity_advanced_point_cloud.xml  activity_advanced_post_processing.xml  activity_advanced_sync_align.xml  activity_basic_enumerate.xml  activity_basic_quick_start.xml  activity_device_control.xml  activity_device_firmware_update.xml  activity_device_hot_plugin.xml  activity_device_optional_depth_presets_update.xml  activity_frame_data.xml  activity_main.xml  activity_save_to_disk.xml  activity_stream_color.xml  activity_stream_depth.xml  activity_stream_imu.xml  activity_stream_infrared.xml  activity_stream_multi_streams.xml  layout_device_item.xml  layout_information_item.xml
doc/: api_changes_at_v2.x.md
example/: build.gradle  proguard-rules.pro
example/libs/: bubbleseekbar-release.aar
example/src/main/: AndroidManifest.xml
example/src/main/cpp/: orbbecsdkexamples.cpp
gradle/wrapper/: gradle-wrapper.properties
keystore/: debug.jks  debug.keystore  debug.pwd  orbbecsdkexample.jks  signature.properties
obsensor_jni/: build.gradle
obsensor_jni/src/main/: AndroidManifest.xml
obsensor_jni/src/main/assets/: OrbbecSDKConfig_v1.0.xml
obsensor_jni/src/main/cpp/: CMakeLists.txt  obsensor_jni.cpp  obsensor_jni.h
obsensor_jni/src/main/cpp/jdatatype/: DataBundle.cpp  DataBundle.h  DepthWorkMode.cpp  DepthWorkMode.h  DeviceInfo.cpp  DeviceInfo.h  DeviceSyncConfig.cpp  DeviceSyncConfig.h  FilterConfigSchemaItem.cpp  FilterConfigSchemaItem.h  MultiDeviceSyncConfig.cpp  MultiDeviceSyncConfig.h  NetworkConfig.cpp  NetworkConfig.h  TimestampResetConfig.cpp  TimestampResetConfig.h
obsensor_jni/src/main/cpp/sensorsdk/include/libobsensor/h/: Filter.h  ObTypes.h
obsensor_jni/src/main/cpp/sensorsdk/include/libobsensor/hpp/: Error.hpp
obsensor_jni/src/main/cpp/sensorsdk/include/libobsensor/internal/: Extension.h  InternalProperty.h  InternalTypes.h  OBDepthDispFilterParam.h  ObTypeFeature.hpp  ObTypeHelper.hpp
obsensor_jni/src/main/cpp/utils/: LocalUtils.cpp  LocalUtils.h
(+300 files in other folders)
